# foco

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  MEMORY.md  Multi-Agent.md  README.md  README.zh-CN.md  SPLIT_PLAN.md  TODO.md  backend-test-slow-points.md  foco-performance-baseline.md  llm-system-prompt-protocol-plan.md  package-lock.json  package.json  start-dev.bat
agent/: Cargo.toml  executor.rs  lib.rs
app/: Cargo.toml  build.rs  git_backend.rs  hooks.rs  hooks_support.rs  logging.rs  main.rs  plan_runtime.rs  settings_runtime.rs  skills.rs  spec_runtime.rs  terminal.rs
app/http/: agents.rs  assets.rs  auth.rs  chat.rs  git.rs  hooks.rs  memory.rs  mod.rs  plans.rs  router.rs  scheduled_tasks.rs  settings.rs  spec.rs  terminal.rs  workspaces.rs
app/memory_runtime/: dream.rs  expiration.rs  extraction.rs  mod.rs  retrieval.rs  scheduler.rs  tools.rs
app/platform/: autostart_windows.rs  macos_environment.rs  mod.rs  native_browser.rs  tray.rs  tray_macos.rs  tray_windows.rs
app/prompt/: assembly.rs  compression.rs  environment.rs  mod.rs  prompt_files.rs
app/runtime/: agent_scheduler.rs  api_audit.rs  chat_run.rs  code_graph.rs  image_tools.rs  mod.rs  native_tools.rs  questions.rs  subscriptions.rs  tool_events.rs  tool_execution.rs  tool_locks.rs  web_tools.rs
app/scheduled_tasks/: mod.rs  scheduler.rs  service.rs  types.rs
app/tests/: mod.rs
docs/superpowers/specs/: 2026-06-29-plan-phase-retry-boundary.md  2026-06-29-release-build-optimization-design.md
graph/: Cargo.toml  lib.rs
mcp/: Cargo.toml  lib.rs
openspec/changes/api-detail-url-pagination/: design.md  proposal.md  tasks.md
openspec/changes/api-detail-url-pagination/specs/api-detail-url-pagination/: spec.md
openspec/specs/api-detail-url-pagination/: spec.md
providers/: Cargo.toml  lib.rs
scripts/: build-release.mjs  dev-args.mjs  dev-backend.mjs  dev-frontend.mjs  package-macos.mjs  smoke-release-macos.mjs  smoke-release-windows.mjs
store/: Cargo.toml  config.rs  lib.rs  memory.rs  memory_records.rs  memory_schema.rs  model_metadata.rs  workspace.rs  workspace_records.rs  workspace_schema.rs
store/tests/: workspace_database.rs
tools/: Cargo.toml  agent_tools.rs  command_tools.rs  definitions.rs  errors.rs  file_tools.rs  graph_tools.rs  lib.rs  plan_tools.rs  spec_tools.rs  todo_tools.rs
web/: App.test.tsx  App.tsx  app-agents.test.tsx  app-chat-stream.test.tsx  app-panels-stats.test.tsx  app-settings.test.tsx  app-shell.test.tsx  app-workspaces.test.tsx  index.html  package.json  styles.css  test-setup.ts  tsconfig.build.json  tsconfig.json  vite.config.ts
web/api/: types.ts
web/app/: app-effects.ts  app-routing.ts  constants.ts
web/features/agents/: AgentTranscriptPanel.tsx  AgentsRuntimePanel.tsx  AgentsSettingsPanel.tsx
web/features/chat/: ChatPanel.tsx  DeleteChatDialog.tsx  MarkdownContent.tsx  MarkdownRenderer.tsx  chat-helpers.ts
web/features/context/: ContextPanel.tsx
web/features/files/: WorkspaceFileEditorPanel.tsx
web/features/git/: GitBranchDialog.tsx  diff-parser.test.ts  diff-parser.ts
web/features/scheduled-tasks/: ScheduledTasksPage.tsx
web/features/settings/: SettingsPanel.tsx
web/features/stats/: ApiStatsPanel.tsx  StatCharts.tsx  ai-stats-preferences.test.ts  ai-stats-preferences.ts  use-ai-statistics-data.ts
web/features/terminal/: TerminalPanel.tsx
web/features/workspaces/: WorkspaceDialog.tsx  WorkspaceIcon.tsx  workspace-helpers.test.ts  workspace-helpers.ts
web/shared/: api-client.ts  browser-route.test.ts  browser-route.ts  i18n.ts
web/test-utils/: app-test-harness.tsx
