[workspace]
members = [
    "app",
    "agent",
    "providers",
    "tools",
    "graph",
    "mcp",
    "store",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.9"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
foco-agent = { path = "agent" }
foco-graph = { path = "graph" }
foco-mcp = { path = "mcp" }
foco-providers = { path = "providers" }
foco-store = { path = "store" }
foco-tools = { path = "tools" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
