[workspace]
members = [
    "app",
    "agent",
    "providers",
    "tools",
    "graph",
    "mcp",
    "store",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
foco-agent = { path = "agent" }
foco-graph = { path = "graph" }
foco-mcp = { path = "mcp" }
foco-providers = { path = "providers" }
foco-store = { path = "store" }
foco-tools = { path = "tools" }
futures-util = { version = "0.3.31", features = ["sink"] }
genai = { version = "0.6.4", default-features = true }
reqwest = { version = "0.12.25", default-features = false, features = ["rustls-tls"] }
rmcp = { version = "1.7.0", default-features = false, features = ["client", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest", "which-command"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
portable-pty = "0.9.0"
ignore = "0.4.25"
notify = "8.2.0"
sha2 = "0.10.9"
tree-sitter = "0.26.9"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
