[workspace]
members = [
    "app",
    "agent",
    "providers",
    "tools",
    "graph",
    "mcp",
    "store",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
foco-agent = { path = "agent" }
foco-graph = { path = "graph" }
foco-mcp = { path = "mcp" }
foco-providers = { path = "providers" }
foco-store = { path = "store" }
foco-tools = { path = "tools" }
futures-util = { version = "0.3.31", features = ["sink"] }
genai = { version = "0.6.4", default-features = true }
getrandom = "0.3.4"
gix = { version = "0.84.0", default-features = false, features = ["sha1", "status", "worktree-mutation"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "socks"] }
regex = "1.12.2"
rmcp = { version = "1.7.0", default-features = false, features = ["client", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest", "which-command"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
flate2 = "1.1.9"
globset = "0.4.18"
tar = "0.4.46"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
portable-pty = "0.9.0"
ignore = "0.4.25"
notify = "8.2.0"
sha2 = "0.10.9"
tree-sitter = "0.26.9"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
webbrowser = "1.2.1"
ico = "0.5.0"
resvg = { version = "0.47.0", default-features = false }
winresource = { version = "0.1.31", default-features = false }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"
