[package]
name = "foco-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "foco"
path = "main.rs"

[dependencies]
async-stream.workspace = true
axum.workspace = true
foco-agent.workspace = true
foco-graph.workspace = true
foco-mcp.workspace = true
foco-providers.workspace = true
foco-store.workspace = true
foco-tools.workspace = true
chrono.workspace = true
futures-util.workspace = true
portable-pty.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
