[package]
name = "foco-app"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[[bin]]
name = "foco"
path = "main.rs"

[dependencies]
async-stream.workspace = true
axum.workspace = true
foco-agent.workspace = true
foco-graph.workspace = true
foco-mcp.workspace = true
foco-providers.workspace = true
foco-store.workspace = true
foco-tools.workspace = true
chrono.workspace = true
futures-util.workspace = true
gix.workspace = true
portable-pty.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webbrowser.workspace = true

[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.24.0", default-features = false }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
ico.workspace = true
resvg.workspace = true
winresource.workspace = true
