[package]
name = "foco-app"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"
autotests = false
[[bin]]
name = "foco"
path = "main.rs"

[dependencies]
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
fancy-regex.workspace = true
foco-agent.workspace = true
foco-graph.workspace = true
foco-mcp.workspace = true
foco-providers.workspace = true
foco-store.workspace = true
foco-tools.workspace = true
chrono.workspace = true
flate2.workspace = true
futures-util.workspace = true
getrandom.workspace = true
gix.workspace = true
portable-pty.workspace = true
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webbrowser.workspace = true

[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.24.0", default-features = false }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSAlert", "NSApplication", "NSButton", "NSControl", "NSOpenPanel", "NSPanel", "NSResponder", "NSSavePanel", "NSRunningApplication", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSObject", "NSString", "NSURL"] }
tray-icon = { version = "0.24.0", default-features = false }

[build-dependencies]
ico.workspace = true
resvg.workspace = true
winresource.workspace = true

[dev-dependencies]
foco-mcp = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
