[package]
name = "foco-graph"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
chrono.workspace = true
foco-store.workspace = true
ignore.workspace = true
notify.workspace = true
sha2.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-typescript.workspace = true
tracing.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
