[package]
name = "foco-mcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
process-wrap.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
which = "8.0.2"
windows = { version = "0.62.2", features = ["Win32_System_Threading"] }
